--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,12 @@ services:
       NODE_ENV: production
       NEXTAUTH_URL: ${NEXTAUTH_URL}
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
+      AUTH_DISABLED: ${AUTH_DISABLED}
       COGNITO_CLIENT_ID: ${COGNITO_CLIENT_ID}
       COGNITO_CLIENT_SECRET: ${COGNITO_CLIENT_SECRET}
       COGNITO_ISSUER: ${COGNITO_ISSUER}
+      NEXT_PUBLIC_TUTOR_API_URL: ${NEXT_PUBLIC_TUTOR_API_URL}
+      TUTOR_JWT_SECRET: ${TUTOR_JWT_SECRET}
       DATABASE_URL: postgresql://german_app:${POSTGRES_PASSWORD}@db:5432/german_app
     ports:
       - "3000:3000"
