added tutor tab

--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,5 @@ POSTGRES_PASSWORD=replace-with-db-password
 AUTH_DISABLED=false
 
 # Tutor AI
-NEXT_PUBLIC_TUTOR_API_URL=http://54.167.92.149:8000
+TUTOR_API_URL=http://54.167.92.149:8000
 TUTOR_JWT_SECRET=replace-with-tutor-jwt-secret
