--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ DATABASE_URL="postgresql://user:password@localhost:5432/german_app"
 POSTGRES_PASSWORD="pguserpassword"
 
 # Tutor AI
-NEXT_PUBLIC_TUTOR_API_URL=http://54.167.92.149:8000
+TUTOR_API_URL=http://54.167.92.149:8000
 TUTOR_JWT_SECRET=ourjwtsecret
