--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ POSTGRES_PASSWORD=replace-with-db-password
 
 # Optional local dev
 AUTH_DISABLED=false
+NEXT_PUBLIC_AUTH_DISABLED=false
 
 # Tutor AI
 TUTOR_API_URL=http://54.167.92.149:8000
