--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "jose": "^5.10.0",
     "@auth/prisma-adapter": "^2.11.1",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.6.0",
@@ -48,6 +47,8 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
+    "jose": "^5.10.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.454.0",
     "next": "16.0.10",
     "next-auth": "^4.24.13",
