--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.10.0",
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.4",
     "postcss": "^8.5",
